Revise new post UI to adapt different category.

--- a/SurRound/View/Post/NewPost/NewPostTextViewCell.xib
+++ b/SurRound/View/Post/NewPost/NewPostTextViewCell.xib
@@ -19,8 +19,11 @@
                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="nyq-UV-tUJ" customClass="KMPlaceholderTextView" customModule="KMPlaceholderTextView">
                         <rect key="frame" x="16" y="16" width="345" height="76"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" priority="750" constant="100" id="LGa-JR-Kot"/>
+                        </constraints>
                         <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                     </textView>
                 </subviews>
