--- a/SurRound/View/Post/NewPost/NewPostMapCell.xib
+++ b/SurRound/View/Post/NewPost/NewPostMapCell.xib
@@ -9,51 +9,80 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="220" id="KGk-i7-Jjw" customClass="NewPostMapCell" customModule="SurRound" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="361" height="220"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="288" id="KGk-i7-Jjw" customClass="NewPostMapCell" customModule="SurRound" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="361" height="288"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="361" height="220"/>
+                <rect key="frame" x="0.0" y="0.0" width="361" height="288"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="6pW-tM-Di7">
-                        <rect key="frame" x="16" y="36" width="329" height="168"/>
+                        <rect key="frame" x="16" y="87" width="329" height="185"/>
+                        <constraints>
+                            <constraint firstAttribute="width" secondItem="6pW-tM-Di7" secondAttribute="height" multiplier="16:9" id="7zd-8K-QDL"/>
+                        </constraints>
                     </mapView>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Icons_24px_LocationPin" translatesAutoresizingMaskIntoConstraints="NO" id="gGE-xm-cf1">
-                        <rect key="frame" x="16" y="8" width="20" height="20"/>
+                        <rect key="frame" x="16" y="16" width="20" height="20"/>
                         <color key="tintColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="gGE-xm-cf1" secondAttribute="height" id="2O0-qG-DeH"/>
                             <constraint firstAttribute="width" constant="20" id="nNF-oZ-1gQ"/>
                         </constraints>
                     </imageView>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IwD-Ir-04m">
+                        <rect key="frame" x="329" y="18" width="16" height="16"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="16" id="Zen-iU-tdm"/>
+                            <constraint firstAttribute="width" constant="16" id="q80-sz-Hij"/>
+                        </constraints>
+                        <state key="normal" image="Icons_Close"/>
+                        <connections>
+                            <action selector="removeLocation:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="PI9-9r-5aF"/>
+                        </connections>
+                    </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="台北市政府" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LsV-IE-h9h">
-                        <rect key="frame" x="44" y="8" width="70" height="20"/>
+                        <rect key="frame" x="44" y="16" width="70" height="20"/>
                         <fontDescription key="fontDescription" name="PingFangTC-Medium" family="PingFang TC" pointSize="14"/>
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sLe-Fr-e2L">
+                        <rect key="frame" x="16" y="16" width="58" height="29"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <state key="normal" title="選擇地點"/>
+                    </button>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="gGE-xm-cf1" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="AtX-lD-IYu"/>
                     <constraint firstItem="gGE-xm-cf1" firstAttribute="leading" secondItem="6pW-tM-Di7" secondAttribute="leading" id="B3O-PL-foV"/>
                     <constraint firstAttribute="trailing" secondItem="6pW-tM-Di7" secondAttribute="trailing" constant="16" id="HKj-An-56Z"/>
+                    <constraint firstItem="IwD-Ir-04m" firstAttribute="trailing" secondItem="6pW-tM-Di7" secondAttribute="trailing" id="NkJ-oF-ws6"/>
                     <constraint firstItem="6pW-tM-Di7" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="Sxg-3Q-eqC"/>
-                    <constraint firstItem="6pW-tM-Di7" firstAttribute="top" secondItem="gGE-xm-cf1" secondAttribute="bottom" constant="8" id="Yu4-wO-ZHJ"/>
+                    <constraint firstItem="6pW-tM-Di7" firstAttribute="top" relation="greaterThanOrEqual" secondItem="gGE-xm-cf1" secondAttribute="bottom" constant="8" id="Yu4-wO-ZHJ"/>
+                    <constraint firstItem="IwD-Ir-04m" firstAttribute="centerY" secondItem="LsV-IE-h9h" secondAttribute="centerY" id="bhG-lb-mfG"/>
+                    <constraint firstItem="sLe-Fr-e2L" firstAttribute="leading" secondItem="6pW-tM-Di7" secondAttribute="leading" id="dB6-Qs-7ki"/>
+                    <constraint firstItem="6pW-tM-Di7" firstAttribute="top" relation="greaterThanOrEqual" secondItem="sLe-Fr-e2L" secondAttribute="bottom" constant="8" id="dkM-n5-ovz"/>
                     <constraint firstAttribute="bottom" secondItem="6pW-tM-Di7" secondAttribute="bottom" constant="16" id="kJA-7b-uWJ"/>
-                    <constraint firstItem="6pW-tM-Di7" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="36" id="pJS-gJ-NKh"/>
+                    <constraint firstItem="sLe-Fr-e2L" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="kKR-gz-c5E"/>
+                    <constraint firstItem="6pW-tM-Di7" firstAttribute="top" relation="greaterThanOrEqual" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="pJS-gJ-NKh"/>
                     <constraint firstItem="LsV-IE-h9h" firstAttribute="leading" secondItem="gGE-xm-cf1" secondAttribute="trailing" constant="8" id="qdi-PU-I8S"/>
                     <constraint firstItem="LsV-IE-h9h" firstAttribute="centerY" secondItem="gGE-xm-cf1" secondAttribute="centerY" id="qxH-Ef-o1O"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="chooseLocationBtn" destination="sLe-Fr-e2L" id="p13-VM-Ada"/>
                 <outlet property="mkMapView" destination="6pW-tM-Di7" id="ktx-Yd-BGc"/>
+                <outlet property="placeIcon" destination="gGE-xm-cf1" id="9lK-fY-Hny"/>
                 <outlet property="placeNameLabel" destination="LsV-IE-h9h" id="o4Q-gZ-5PA"/>
+                <outlet property="removeLocationBtn" destination="IwD-Ir-04m" id="0Do-hQ-uT1"/>
             </connections>
-            <point key="canvasLocation" x="161.59420289855075" y="168.75"/>
+            <point key="canvasLocation" x="161.59420289855075" y="213.61607142857142"/>
         </tableViewCell>
     </objects>
     <resources>
         <image name="Icons_24px_LocationPin" width="24" height="24"/>
+        <image name="Icons_Close" width="21" height="21"/>
     </resources>
 </document>
