--- a/SurRound/View/Post/NewPost/NewPostMediaCell.xib
+++ b/SurRound/View/Post/NewPost/NewPostMediaCell.xib
@@ -17,13 +17,14 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Image_Placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="ANe-2u-QC4">
-                        <rect key="frame" x="16" y="46" width="97" height="97"/>
+                        <rect key="frame" x="16" y="48" width="96" height="96"/>
                         <constraints>
-                            <constraint firstAttribute="width" secondItem="ANe-2u-QC4" secondAttribute="height" id="2AB-mc-q1f"/>
+                            <constraint firstAttribute="height" constant="96" id="7Vx-wh-uzF"/>
+                            <constraint firstAttribute="width" secondItem="ANe-2u-QC4" secondAttribute="height" id="THl-qP-O3b"/>
                         </constraints>
                     </imageView>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mei-I7-iui">
-                        <rect key="frame" x="16" y="8" width="30" height="30"/>
+                        <rect key="frame" x="16" y="8" width="32" height="32"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="mei-I7-iui" secondAttribute="height" id="0Qr-VO-xAK"/>
                             <constraint firstAttribute="width" constant="30" id="8EL-Db-AGa"/>
@@ -34,7 +35,7 @@
                         </connections>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ovf-PX-nHq">
-                        <rect key="frame" x="98.5" y="39" width="21" height="22"/>
+                        <rect key="frame" x="97.5" y="41" width="21" height="22"/>
                         <state key="normal" image="Icons_Close"/>
                         <connections>
                             <action selector="didTapDelete:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="K6c-gy-7Xr"/>
