--- a/SurRound/View/Post/NewPost/Base.lproj/NewPost.storyboard
+++ b/SurRound/View/Post/NewPost/Base.lproj/NewPost.storyboard
@@ -47,6 +47,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="newPostTableView" destination="KyO-VT-ypW" id="d3R-Pw-mVf"/>
+                        <segue destination="YjO-mC-ASe" kind="show" identifier="SegueSelectLocation" id="doX-x8-YIG"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="poA-ix-wpV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -178,8 +179,79 @@
             </objects>
             <point key="canvasLocation" x="1042.0289855072465" y="123.88392857142857"/>
         </scene>
+        <!--Select Location View Controller-->
+        <scene sceneID="QTv-IO-1e1">
+            <objects>
+                <viewController storyboardIdentifier="SelectLocationViewController" id="YjO-mC-ASe" customClass="SelectLocationViewController" customModule="SurRound" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="RMk-nQ-jVQ">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5P4-uO-FE5" customClass="GMSMapView">
+                                <rect key="frame" x="0.0" y="88" width="414" height="688"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nbw-Y8-DsV" userLabel="Bottom Docker View">
+                                <rect key="frame" x="0.0" y="776" width="414" height="120"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="120" id="B7R-6K-l6q"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cz6-fs-H7f">
+                                <rect key="frame" x="16" y="792" width="382" height="70"/>
+                                <color key="backgroundColor" red="0.22352941176470587" green="0.21568627450980393" blue="0.35686274509803922" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
+                                <state key="normal" title="Select this location">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="16"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Icons_MapLocationPin" translatesAutoresizingMaskIntoConstraints="NO" id="sWX-7W-aAd">
+                                <rect key="frame" x="187" y="392" width="40" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="6FA-tH-ZUJ"/>
+                                    <constraint firstAttribute="width" constant="40" id="Oah-mW-Tm3"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="nbw-Y8-DsV" firstAttribute="leading" secondItem="RMk-nQ-jVQ" secondAttribute="leading" id="8O5-nB-p81"/>
+                            <constraint firstAttribute="bottom" secondItem="nbw-Y8-DsV" secondAttribute="bottom" id="9Oq-x0-yW0"/>
+                            <constraint firstItem="nbw-Y8-DsV" firstAttribute="top" secondItem="5P4-uO-FE5" secondAttribute="bottom" id="D0F-A8-4uo"/>
+                            <constraint firstItem="5P4-uO-FE5" firstAttribute="trailing" secondItem="eQc-YD-dz8" secondAttribute="trailing" id="EBK-J5-uEF"/>
+                            <constraint firstItem="sWX-7W-aAd" firstAttribute="bottom" secondItem="5P4-uO-FE5" secondAttribute="centerY" id="Fl8-xA-lfz"/>
+                            <constraint firstItem="sWX-7W-aAd" firstAttribute="centerX" secondItem="5P4-uO-FE5" secondAttribute="centerX" id="Ter-KM-7j0"/>
+                            <constraint firstItem="nbw-Y8-DsV" firstAttribute="trailing" secondItem="RMk-nQ-jVQ" secondAttribute="trailing" id="W2t-XP-k3Y"/>
+                            <constraint firstItem="cz6-fs-H7f" firstAttribute="top" secondItem="nbw-Y8-DsV" secondAttribute="top" constant="16" id="Zvy-fa-kBD"/>
+                            <constraint firstItem="5P4-uO-FE5" firstAttribute="top" secondItem="eQc-YD-dz8" secondAttribute="top" id="gLs-NT-wXV"/>
+                            <constraint firstItem="cz6-fs-H7f" firstAttribute="trailing" secondItem="nbw-Y8-DsV" secondAttribute="trailing" constant="-16" id="hmu-0y-xse"/>
+                            <constraint firstItem="eQc-YD-dz8" firstAttribute="bottom" secondItem="cz6-fs-H7f" secondAttribute="bottom" id="qRM-yF-hn5"/>
+                            <constraint firstItem="cz6-fs-H7f" firstAttribute="leading" secondItem="nbw-Y8-DsV" secondAttribute="leading" constant="16" id="uBV-Mj-j9V"/>
+                            <constraint firstItem="5P4-uO-FE5" firstAttribute="leading" secondItem="eQc-YD-dz8" secondAttribute="leading" id="x44-GD-ApI"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="eQc-YD-dz8"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="IcS-C8-GHS">
+                        <barButtonItem key="rightBarButtonItem" title="Item" image="magnifyingglass" catalog="system" id="zSN-RZ-6ps"/>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="mapView" destination="5P4-uO-FE5" id="Qof-5q-hS0"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fhh-fk-Evk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2798.5507246376815" y="123.88392857142857"/>
+        </scene>
     </scenes>
     <resources>
         <image name="Icons_24px_Add" width="24" height="24"/>
+        <image name="Icons_MapLocationPin" width="32" height="32"/>
+        <image name="magnifyingglass" catalog="system" width="64" height="56"/>
     </resources>
 </document>
