--- a/SurRound/View/Base.lproj/Explore.storyboard
+++ b/SurRound/View/Base.lproj/Explore.storyboard
@@ -63,10 +63,10 @@
             </objects>
             <point key="canvasLocation" x="923.1884057971015" y="34.821428571428569"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Invisible Nav Controller-->
         <scene sceneID="jnR-30-bFR">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="98S-tq-NqU" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="98S-tq-NqU" customClass="InvisibleNavController" customModule="SurRound" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ovD-KD-Aw9">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
