--- a/SurRound/View/Base.lproj/Profile.storyboard
+++ b/SurRound/View/Base.lproj/Profile.storyboard
@@ -15,9 +15,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q9D-rM-ffB">
-                                <rect key="frame" x="177" y="433" width="60" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q9D-rM-ffB">
+                                <rect key="frame" x="172" y="431" width="70" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <color key="tintColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" title="Sign Out"/>
                                 <connections>
                                     <action selector="signOut:" destination="y53-h9-qyE" eventType="touchUpInside" id="uyx-iD-QTQ"/>
@@ -25,6 +26,10 @@
                             </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="Q9D-rM-ffB" firstAttribute="centerX" secondItem="oxM-jv-uLL" secondAttribute="centerX" id="QUC-Xb-hrg"/>
+                            <constraint firstItem="Q9D-rM-ffB" firstAttribute="centerY" secondItem="oxM-jv-uLL" secondAttribute="centerY" id="f9L-lL-YHh"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="c7X-7G-7QB"/>
                     </view>
                     <navigationItem key="navigationItem" id="EWQ-ts-iie"/>
