Starting building Story UI and functionality. 1. Create Story.storyboard 2. Rearrange folder structure

--- a/SurRound/View/Base.lproj/Explore.storyboard
+++ b/SurRound/View/Base.lproj/Explore.storyboard
@@ -120,7 +120,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lMl-yB-j3f" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="921.73913043478262" y="726.5625"/>
+            <point key="canvasLocation" x="925" y="726"/>
         </scene>
         <!--Nearest List View Controller-->
         <scene sceneID="CBa-hH-Pd9">
