--- a/SurRound/View/Post+Story/Story/Story.storyboard
+++ b/SurRound/View/Post+Story/Story/Story.storyboard
@@ -31,10 +31,13 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="bon-1C-XHs"/>
                     </view>
+                    <connections>
+                        <outlet property="sendButton" destination="roL-ut-pcd" id="7KE-eQ-mJA"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZMw-9L-k0M" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="39" y="377"/>
+            <point key="canvasLocation" x="37.681159420289859" y="376.33928571428572"/>
         </scene>
         <!--Story View Controller-->
         <scene sceneID="aAG-2H-6uj">
