--- a/SurRound/View/Home/Base.lproj/Home.storyboard
+++ b/SurRound/View/Home/Base.lproj/Home.storyboard
@@ -32,30 +32,34 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="StoryPreviewCell" id="gnp-Zh-ksB" customClass="StoryPreviewCell" customModule="SurRound" customModuleProvider="target">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="StoryPreviewCell" translatesAutoresizingMaskIntoConstraints="NO" id="gnp-Zh-ksB" customClass="StoryPreviewCell" customModule="SurRound" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="12.5" width="59" height="55"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Wy7-RM-eK4">
                                             <rect key="frame" x="0.0" y="0.0" width="59" height="55"/>
-                                            <autoresizingMask key="autoresizingMask"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8TP-7S-TSO">
                                                     <rect key="frame" x="0.0" y="0.0" width="59" height="55"/>
                                                     <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                 </view>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="BUJ-OM-MCT">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="BUJ-OM-MCT">
                                                     <rect key="frame" x="4" y="4" width="51" height="47"/>
                                                     <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="BUJ-OM-MCT" secondAttribute="height" multiplier="1:1" id="29X-9N-WTe"/>
+                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="54" id="96W-ty-rjX"/>
+                                                    </constraints>
                                                 </imageView>
                                             </subviews>
                                             <constraints>
+                                                <constraint firstItem="8TP-7S-TSO" firstAttribute="bottom" secondItem="BUJ-OM-MCT" secondAttribute="bottom" constant="4" id="1tY-Ht-9Rp"/>
                                                 <constraint firstItem="BUJ-OM-MCT" firstAttribute="leading" secondItem="Wy7-RM-eK4" secondAttribute="leading" constant="4" id="1xD-7g-jde"/>
+                                                <constraint firstItem="8TP-7S-TSO" firstAttribute="top" secondItem="BUJ-OM-MCT" secondAttribute="top" constant="-4" id="96T-Nx-WaR"/>
                                                 <constraint firstItem="BUJ-OM-MCT" firstAttribute="top" secondItem="Wy7-RM-eK4" secondAttribute="top" constant="4" id="Izv-eE-Jbb"/>
-                                                <constraint firstAttribute="trailing" secondItem="8TP-7S-TSO" secondAttribute="trailing" id="T7T-WD-caQ"/>
-                                                <constraint firstItem="8TP-7S-TSO" firstAttribute="leading" secondItem="Wy7-RM-eK4" secondAttribute="leading" id="WMy-XQ-ic7"/>
+                                                <constraint firstItem="8TP-7S-TSO" firstAttribute="leading" secondItem="BUJ-OM-MCT" secondAttribute="leading" constant="-4" id="Vup-3S-zMQ"/>
                                                 <constraint firstAttribute="trailing" secondItem="BUJ-OM-MCT" secondAttribute="trailing" constant="4" id="Y6P-np-qKI"/>
-                                                <constraint firstAttribute="bottom" secondItem="8TP-7S-TSO" secondAttribute="bottom" id="db4-5t-UZP"/>
-                                                <constraint firstItem="8TP-7S-TSO" firstAttribute="top" secondItem="Wy7-RM-eK4" secondAttribute="top" id="xc0-Ep-Jv8"/>
+                                                <constraint firstItem="8TP-7S-TSO" firstAttribute="trailing" secondItem="BUJ-OM-MCT" secondAttribute="trailing" constant="4" id="tG2-Bu-xrW"/>
                                                 <constraint firstAttribute="bottom" secondItem="BUJ-OM-MCT" secondAttribute="bottom" constant="4" id="zJ7-q6-WuN"/>
                                             </constraints>
                                         </collectionViewCellContentView>
