--- a/SurRound/View/Home/Base.lproj/Home.storyboard
+++ b/SurRound/View/Home/Base.lproj/Home.storyboard
@@ -43,12 +43,12 @@
                                                     <rect key="frame" x="0.0" y="0.0" width="59" height="55"/>
                                                     <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                 </view>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="BUJ-OM-MCT">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="BUJ-OM-MCT">
                                                     <rect key="frame" x="4" y="4" width="51" height="47"/>
                                                     <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" secondItem="BUJ-OM-MCT" secondAttribute="height" multiplier="1:1" id="29X-9N-WTe"/>
-                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="54" id="96W-ty-rjX"/>
+                                                        <constraint firstAttribute="width" constant="50" id="96W-ty-rjX"/>
                                                     </constraints>
                                                 </imageView>
                                             </subviews>
