--- a/SurRound/View/Post+Story/Story/StoryCounterCell.xib
+++ b/SurRound/View/Post+Story/Story/StoryCounterCell.xib
@@ -17,12 +17,12 @@
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="oB5-c1-8eS">
-                        <rect key="frame" x="2" y="25.5" width="93" height="2"/>
+                        <rect key="frame" x="2" y="25" width="93" height="3"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="2" id="5We-bp-kl0"/>
+                            <constraint firstAttribute="height" constant="3" id="5We-bp-kl0"/>
                         </constraints>
-                        <color key="progressTintColor" systemColor="systemTealColor" red="0.35294117650000001" green="0.7843137255" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <color key="trackTintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="progressTintColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="trackTintColor" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </progressView>
                 </subviews>
             </view>
