--- a/SurRound/View/Post+Story/NewPost/Base.lproj/NewPost.storyboard
+++ b/SurRound/View/Post+Story/NewPost/Base.lproj/NewPost.storyboard
@@ -76,9 +76,8 @@
                     <rect key="frame" x="0.0" y="0.0" width="413" height="250"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <subviews>
-                        <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="3wH-5s-8AT">
-                            <rect key="frame" x="20" y="17" width="373" height="213"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="3wH-5s-8AT">
+                            <rect key="frame" x="0.0" y="0.0" width="413" height="250"/>
                             <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="cNj-M4-WXR">
                                 <size key="itemSize" width="128" height="128"/>
                                 <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -93,6 +92,12 @@
                         </collectionView>
                     </subviews>
                     <color key="backgroundColor" red="0.54740279213387344" green="0.60929281799807822" blue="0.66666668653488159" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstItem="D66-Gt-45K" firstAttribute="bottom" secondItem="3wH-5s-8AT" secondAttribute="bottom" id="ELZ-IK-B8c"/>
+                        <constraint firstItem="3wH-5s-8AT" firstAttribute="top" secondItem="0Ju-eX-Dlf" secondAttribute="top" id="YpA-Y1-WzD"/>
+                        <constraint firstItem="3wH-5s-8AT" firstAttribute="leading" secondItem="D66-Gt-45K" secondAttribute="leading" id="mks-D6-ECm"/>
+                        <constraint firstItem="D66-Gt-45K" firstAttribute="trailing" secondItem="3wH-5s-8AT" secondAttribute="trailing" id="oeU-Lq-0Fd"/>
+                    </constraints>
                     <viewLayoutGuide key="safeArea" id="D66-Gt-45K"/>
                 </view>
             </objects>
